...
    }

    Scaffold(topBar = {
        TopAppBar("PaperTrader", leftButton = {
            Row(Modifier.padding(8.dp)) {
                IconButton(
                    modifier = Modifier.testTag("settingsButtonTag"),
                    onClick = { navController.navigate(Screen.Settings) }) {
                    Icon(Icons.Default.Settings, "Settings")
                }
                IconButton(onClick = {
                    val selectorIntent = Intent(Intent.ACTION_SENDTO).apply {
                        data = Uri.parse("mailto:") // only email apps should handle this
                    }
                    val emailIntent = Intent(Intent.ACTION_SEND).apply {
...
                        context.startActivity(emailIntent)
                }) {
                    Icon(Icons.Default.Feedback, "Feedback")
                }
            }
        }, rightButton = {
            IconButton(onClick = { navController.navigate(Screen.Login) }, modifier = Modifier.testTag("account")) {
                Row(verticalAlignment = Alignment.CenterVertically) {
                    Icon(Icons.Default.AccountCircle, "Account")
                }
            }
        })
    }, floatingActionButton = {
        ExtendedFloatingActionButton(
            modifier = Modifier.semantics { testTag = "new session tag" },
            content = {
            Icon(Icons.Default.Add, "Add")
            Spacer(Modifier.width(8.dp))
            Text("New Session")
        }, onClick = { navController.navigate(Screen.NewSession()) })
    }) {
...
                    Text("Sessions", style = AppTypography.headlineLarge)
                    Spacer(Modifier.height(16.dp))
                    if (userSessions.isEmpty()) {
                        Text(
                            "You don't have any sessions yet.\nClick New Session to start.",
                            style = AppTypography.labelLarge,
                            modifier = Modifier.testTag("no sessions")
                        )
                    } else {
                        LazyColumn(Modifier.fillMaxHeight()) {
                            items(userSessions) {
                                SessionCard(it, navController)
                                Spacer(Modifier.height(8.dp))
...
fun SessionCard(session: UserSessionData, navController: NavController<Screen>) {
    Card(
        Modifier
            .fillMaxWidth()
            .clickable {
                navController.navigate(Screen.SessionInfo(session.id))
            }.testTag("sessionCardTag")
    ) {
        Column(Modifier.padding(8.dp)) {
            if (session.startTS != 0.toLong() && session.endTS != 0.toLong())
                Text(
                    dateTimeText(session.startTS, session.endTS),
                    style = AppTypography.headlineMedium
...
