...
                }) {
                    Text("Open")
                }
            },
            dismissButton = {
                TextButton(onClick = { openEmailDialog = false }) {
                    Text("Back")
                }
            })
    }

    if (deleteUserConfirmDialog) {
        AlertDialog(
...
                        loading = true
                        deleteUserWithSessions(Auth.uid)
                        Auth.deleteAccount()
                        loading = false
                        navController.pop()
                    }
                }, modifier = Modifier.testTag("sure to delete account")) {
                    Text("Delete", color = colorScheme.error)
                }
            },
            dismissButton = {
                TextButton(onClick = { deleteUserConfirmDialog = false }) {
                    Text("Back")
...
                    style = AppTypography.labelSmall
                )
            }
            Spacer(Modifier.height(16.dp))
            if (Auth.signedIn) {
                TextButton(
                    modifier = Modifier.testTag("delete account"),
                    onClick = {
                        deleteUserConfirmDialog = true
                        Toast.makeText(
                            context,
                            "Account deleted.",
                            Toast.LENGTH_SHORT
...
