...
        Column(Modifier.fillMaxWidth()) {
            Text("Interval: ${sliderValInt.value} seconds")
            Slider(
                value = sliderVal, onValueChange = {
                sliderVal = it
                updateVal()
            }, valueRange = 5f..20f, modifier = Modifier.testTag("autoSaveSliderTag").padding(8.dp, 24.dp), steps = 15)
        }
    }
}

@Composable
fun MultiplierSettings() {
...
    SettingsCard(title = "Multiplier", description = "Maximum multiplier in game") {
        Column(Modifier.fillMaxWidth()) {
            Text("Max multi: +/- ${maxMultiplierValInt.value}x")
            Slider(value = maxMultiplier, onValueChange = {
                maxMultiplier = it
                updateVal()
            }, valueRange = 1f..20f, modifier = Modifier.testTag("multiplierSliderTag").padding(8.dp, 24.dp), steps = 20)
        }
    }
}

@OptIn(ExperimentalMaterial3Api::class)
@Composable
...
