...
        }
    }


    Scaffold(topBar = {
        TopAppBar(
            "Session info",
            leftButton = { BackButton() { navController.pop() } }, rightButton = {
                IconButton(onClick = { shareSession() }) {
                    Icon(
                        Icons.Default.Share, "Share session"
                    )
                }
...
                        "UPnL: %.2f".format(SessionModel.upnl_view),
                        style = AppTypography.headlineMedium,
                        color = if (SessionModel.upnl_view < 0) loss else profit
                    )
                    Spacer(Modifier.height(16.dp))
                    Button(
                        modifier = Modifier.fillMaxWidth().semantics { testTag="trade" },
                        onClick = { navController.navigate(Screen.SessionPlay(SessionModel.sessionData.id)) }) {
                        Text(if (SessionModel.currentTimestamp < SessionModel.sessionData.endTS) "Trade" else "View chart")
                    }
                } else {
                    Text(
                        "PnL: %.2f".format(SessionModel.pnl_view),
...
